ci: replace samples bash with Node.js script

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/node": "^14.14.37",
     "@types/postcss-preset-env": "^6.7.1",
     "@types/read-pkg-up": "^3.0.1",
+    "@types/shelljs": "^0.8.9",
     "@types/sinon": "^10.0.0",
     "@types/stylus": "^0.48.30",
     "chai": "^4.0.1",
@@ -101,6 +102,7 @@
     "pretty-quick": "~3.1.0",
     "rimraf": "^3.0.2",
     "rxjs-compat": "^6.0.0",
+    "shelljs": "^0.8.4",
     "sinon": "^11.0.0",
     "source-map": "^0.7.0",
     "standard-version": "^9.0.0",
@@ -117,7 +119,7 @@
     "schema": "json2ts --input src/ng-package.schema.json --output src/ng-package.schema.ts",
     "release": "standard-version --releaseCommitMessageFormat 'release: cut v{{currentTag}}' --no-verify",
     "publish:ci": "yarn build",
-    "integration:samples": "integration/samples.sh",
+    "integration:samples": "ts-node integration/samples.ts",
     "integration:samples:dev": "ts-node --project src/tsconfig.packagr.json ./integration/samples.dev.ts",
     "integration:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --require ts-node/register \"integration/samples/*/specs/**/*.ts\"",
     "integration:consumers": "integration/consumers.sh",
