--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "peerDependencies": {
     "@angular/compiler-cli": "^13.0.0-next.0",
     "tslib": "^2.1.0",
-    "typescript": "~4.2.3 || ~4.3.2"
+    "typescript": "~4.4.0"
   },
   "devDependencies": {
     "@angular/cdk": "^12.0.0",
@@ -105,7 +105,7 @@
     "standard-version": "^9.0.0",
     "ts-node": "^10.0.0",
     "tslib": "^2.0.0",
-    "typescript": "~4.3.3",
+    "typescript": "~4.4.0",
     "zone.js": "^0.11.0"
   },
   "private": true,
