build: enable `allowSyntheticDefaultImports`
Needed due to the recent changes in APF 13 https://github.com/angular/angular/issues/43431

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noImplicitAny": false,
     "sourceMap": true,
     "inlineSourceMap": false,
+    "allowSyntheticDefaultImports": true,
     "inlineSources": true,
     "lib": ["es2019"],
     "types": ["chai", "mocha", "node", "sinon"]
