test: update tests to jasmine which supports ESM better

--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "@angular/router": "~13.0.0-next",
     "@commitlint/cli": "^13.0.0",
     "@commitlint/config-angular": "^13.0.0",
-    "@types/acorn": "^4.0.3",
     "@types/cacache": "^15.0.0",
     "@types/chai": "^4.0.0",
     "@types/chokidar": "^1.7.5",
@@ -84,26 +83,23 @@
     "@types/glob": "^7.0.0",
     "@types/jasmine": "^3.0.0",
     "@types/less": "^3.0.2",
-    "@types/mocha": "^9.0.0",
     "@types/node": "^14.14.37",
     "@types/postcss-preset-env": "^6.7.1",
     "@types/read-pkg-up": "^3.0.1",
-    "@types/sinon": "^10.0.0",
     "@types/stylus": "^0.48.30",
     "chai": "^4.0.1",
     "cross-env": "^7.0.0",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.0",
-    "jasmine": "^3.0.0",
+    "jasmine": "^3.9.0",
+    "jasmine-ts": "^0.4.0",
     "json-schema-to-typescript": "^10.0.0",
-    "mocha": "^9.0.0",
     "prettier": "~2.4.0",
     "pretty-quick": "~3.1.0",
     "rimraf": "^3.0.2",
-    "sinon": "^11.0.0",
     "source-map": "^0.7.0",
     "standard-version": "^9.0.0",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.2.1",
     "tslib": "^2.0.0",
     "typescript": "~4.4.0",
     "zone.js": "^0.11.0"
@@ -118,11 +114,11 @@
     "publish:ci": "yarn build",
     "integration:samples": "ts-node integration/samples.ts",
     "integration:samples:dev": "ts-node --project src/tsconfig.packagr.json ./integration/samples.dev.ts",
-    "integration:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --require ts-node/register \"integration/samples/*/specs/**/*.ts\"",
+    "integration:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json jasmine-ts \"integration/samples/*/specs/**/*.ts\"",
     "integration:consumers": "integration/consumers.sh",
     "integration:consumers:ngc": "ngc -p integration/consumers/tsc/tsconfig.json",
-    "integration:watch:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --timeout 25000 --require ts-node/register \"integration/watch/*.spec.ts\"",
-    "test:specs": "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json mocha --require ts-node/register \"src/**/*.spec.ts\"",
+    "integration:watch:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json jasmine-ts --random=false \"integration/watch/*.spec.ts\"",
+    "test:specs": "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json jasmine-ts \"src/**/*.spec.ts\"",
     "test": "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:watch:specs && yarn integration:consumers",
     "gh-pages": "gh-pages -d docs/ghpages"
   },
