--- a/package.json
+++ b/package.json
@@ -87,8 +87,14 @@
     "@types/postcss-preset-env": "^6.7.1",
     "@types/read-pkg-up": "^3.0.1",
     "@types/stylus": "^0.48.30",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "chai": "^4.0.1",
     "cross-env": "^7.0.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-header": "3.1.1",
+    "eslint-plugin-import": "2.24.2",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.0",
     "jasmine": "^3.9.0",
@@ -112,6 +118,7 @@
     "schema": "json2ts --input src/ng-package.schema.json --output src/ng-package.schema.ts",
     "release": "standard-version --releaseCommitMessageFormat 'release: cut v{{currentTag}}' --no-verify",
     "publish:ci": "yarn build",
+    "lint": "eslint --cache --max-warnings=0 \"**/*.ts\"",
     "integration:samples": "ts-node integration/samples.ts",
     "integration:samples:dev": "ts-node --project src/tsconfig.packagr.json ./integration/samples.dev.ts",
     "integration:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json jasmine-ts \"integration/samples/*/specs/**/*.ts\"",
