--- a/renovate.json
+++ b/renovate.json
@@ -19,6 +19,11 @@
       "pinVersions": false
     },
     {
+      "packagePatterns": ["^@typescript-eslint/.*"],
+      "groupName": "typescript-eslint",
+      "pinVersions": false
+    },
+    {
       "packagePatterns": ["^jasmine.*"],
       "groupName": "jasmine",
       "pinVersions": false
