--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "dependency-graph": "^0.11.0",
     "esbuild-wasm": "^0.13.0",
     "find-cache-dir": "^3.3.1",
+    "find-parent-dir": "^0.3.1",
     "glob": "^7.1.6",
     "injection-js": "^2.4.0",
     "jsonc-parser": "^3.0.0",
     "less": "^4.1.0",
-    "node-sass-tilde-importer": "^1.0.2",
     "ora": "^5.1.0",
     "postcss": "^8.2.4",
     "postcss-preset-env": "^6.7.0",
@@ -78,6 +78,7 @@
     "@types/chai": "^4.0.0",
     "@types/chokidar": "^1.7.5",
     "@types/find-cache-dir": "^3.2.0",
+    "@types/find-parent-dir": "^0.3.0",
     "@types/fs-extra": "^9.0.10",
     "@types/glob": "^7.0.0",
     "@types/jasmine": "^3.0.0",
