--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -7,31 +7,31 @@
     "start": "ng serve",
     "build": "ng build",
     "build:dev": "ng build",
-    "build:prod:jit": "ng build --prod --aot=false --build-optimizer=false",
-    "build:prod:aot": "ng build --prod",
+    "build:prod:jit": "ng build --configuration production --no-aot --no-build-optimizer",
+    "build:prod:aot": "ng build --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
+    "@angular/cdk": "~13.0.0-rc.0",
+    "@angular/common": "~13.0.0-rc.0",
+    "@angular/compiler": "~13.0.0-rc.0",
+    "@angular/core": "~13.0.0-rc.0",
+    "@angular/forms": "~13.0.0-rc.0",
+    "@angular/platform-browser": "~13.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "~13.0.0-rc.0",
+    "@angular/router": "~13.0.0-rc.0",
+    "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.0",
-    "@angular/cli": "~12.2.0",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "~13.0.0-rc.0",
+    "@angular/cli": "~13.0.0-rc.0",
+    "@angular/compiler-cli": "~13.0.0-rc.0",
     "@types/node": "^14.14.37",
-    "typescript": "4.4.4"
+    "typescript": "~4.4.4"
   }
 }
