build: update to stable v13 release of Angular framework
Updates to the stable v13 release of the Angular framework, fixing
the peer dependency warnings.

Also a stable version of the compiler-cli is required as peer
dependency, instead of allowing for next versions (which was previously
only supported in the next phase of v13).

--- a/package.json
+++ b/package.json
@@ -59,19 +59,19 @@
     "esbuild": "^0.13.0"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "^13.0.0-next.0",
+    "@angular/compiler-cli": "^13.0.0 || ^13.1.0-next",
     "tslib": "^2.3.0",
     "typescript": "~4.4.0"
   },
   "devDependencies": {
     "@angular/cdk": "^13.0.0",
-    "@angular/common": "~13.0.0-next",
-    "@angular/compiler": "~13.0.0-next",
-    "@angular/compiler-cli": "~13.0.0-next",
-    "@angular/core": "~13.0.0-next",
+    "@angular/common": "~13.0.0",
+    "@angular/compiler": "~13.0.0",
+    "@angular/compiler-cli": "~13.0.0",
+    "@angular/core": "~13.0.0",
     "@angular/material": "^13.0.0",
-    "@angular/platform-browser": "~13.0.0-next",
-    "@angular/router": "~13.0.0-next",
+    "@angular/platform-browser": "~13.0.0",
+    "@angular/router": "~13.0.0",
     "@commitlint/cli": "^14.0.0",
     "@commitlint/config-angular": "^14.0.0",
     "@types/cacache": "^15.0.0",
