test: update apf integration test to ensure custom conditions/subpaths can be added
Updates the APF integration test to ensure custom conditions/subpaths
can be added.

--- a/integration/samples/apf/package.json
+++ b/integration/samples/apf/package.json
@@ -15,11 +15,20 @@
       "../../../node_modules/.bin/cross-env TS_NODE_PROJECT=../../../integration/tsconfig.specs.json ../../../node_modules/.bin/mocha --compilers ts:ts-node/register specs/**/*.ts"
   },
   "ngPackage": {
+    "assets": ["./*.scss"],
     "lib": {
       "entryFile": "public_api.ts"
     }
   },
   "devDependencies": {
     "@angular/compiler-cli": "^4.1.2"
+  },
+  "exports": {
+    ".": {
+      "sass": "./theming.scss"
+    },
+    "./theming": {
+      "sass": "./theming.scss"
+    }
   }
 }
