fix: package exports merging during watch mode
Closes #2168

--- a/integration/watch/resources/package.json
+++ b/integration/watch/resources/package.json
@@ -9,6 +9,11 @@
     "@angular/core": "^4.1.2",
     "@angular/common": "^4.1.2"
   },
+  "exports": {
+    "./theme": {
+      "sass": "./_theme.scss"
+    }
+  },
   "ngPackage": {
     "lib": {
       "entryFile": "public_api.ts"
