build: fix husky v7 hooks

--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
   },
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "prebuild": "rimraf dist && yarn schema",
     "build": "tsc -p src/tsconfig.packagr.json",
     "postbuild": "node ./scripts/postbuild.js",
@@ -125,11 +126,5 @@
     "test:specs": "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json jasmine-ts \"src/**/*.spec.ts\"",
     "test": "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:watch:specs && yarn integration:consumers",
     "gh-pages": "gh-pages -d docs/ghpages"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "pretty-quick --staged"
-    }
   }
 }
