--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -15,7 +15,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "~13.0.0-rc.0",
+    "@angular/cdk": "~13.1.0",
     "@angular/common": "~13.0.0-rc.0",
     "@angular/compiler": "~13.0.0-rc.0",
     "@angular/core": "~13.0.0-rc.0",
