--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -16,21 +16,21 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "~13.1.0",
-    "@angular/common": "~13.0.0-rc.0",
-    "@angular/compiler": "~13.0.0-rc.0",
-    "@angular/core": "~13.0.0-rc.0",
-    "@angular/forms": "~13.0.0-rc.0",
-    "@angular/platform-browser": "~13.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "~13.0.0-rc.0",
-    "@angular/router": "~13.0.0-rc.0",
+    "@angular/common": "~13.1.0",
+    "@angular/compiler": "~13.1.0",
+    "@angular/core": "~13.1.0",
+    "@angular/forms": "~13.1.0",
+    "@angular/platform-browser": "~13.1.0",
+    "@angular/platform-browser-dynamic": "~13.1.0",
+    "@angular/router": "~13.1.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.0-rc.0",
-    "@angular/cli": "~13.0.0-rc.0",
-    "@angular/compiler-cli": "~13.0.0-rc.0",
+    "@angular-devkit/build-angular": "~13.1.0",
+    "@angular/cli": "~13.1.0",
+    "@angular/compiler-cli": "~13.1.0",
     "@types/node": "^14.14.37",
     "typescript": "~4.5.0"
   }
