build: update angular to ~13.2.0

--- a/package.json
+++ b/package.json
@@ -66,14 +66,14 @@
     "typescript": ">=4.4.0 <4.6"
   },
   "devDependencies": {
-    "@angular/cdk": "~13.1.0-next",
-    "@angular/common": "~13.1.0-next",
-    "@angular/compiler": "~13.1.0-next",
-    "@angular/compiler-cli": "~13.1.0-next",
-    "@angular/core": "~13.1.0-next",
-    "@angular/material": "~13.1.0-next",
-    "@angular/platform-browser": "~13.1.0-next",
-    "@angular/router": "~13.1.0-next",
+    "@angular/cdk": "~13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/material": "~13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/router": "~13.2.0",
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-angular": "^16.0.0",
     "@types/cacache": "^15.0.0",
