--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-packagr",
-  "version": "13.2.0",
+  "version": "14.0.0-next",
   "description": "Compile and package Angular libraries in Angular Package Format (APF)",
   "keywords": [
     "apf",
@@ -61,19 +61,19 @@
     "esbuild": "^0.14.0"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "^13.0.0 || ^13.2.0-next",
+    "@angular/compiler-cli": "^14.0.0 || ^14.0.0-next",
     "tslib": "^2.3.0",
     "typescript": ">=4.4.0 <4.6"
   },
   "devDependencies": {
-    "@angular/cdk": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/material": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/router": "~13.2.0",
+    "@angular/cdk": "~14.0.0-next",
+    "@angular/common": "~14.0.0-next",
+    "@angular/compiler": "~14.0.0-next",
+    "@angular/compiler-cli": "~14.0.0-next",
+    "@angular/core": "~14.0.0-next",
+    "@angular/material": "~14.0.0-next",
+    "@angular/platform-browser": "~14.0.0-next",
+    "@angular/router": "~14.0.0-next",
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-angular": "^16.0.0",
     "@types/cacache": "^15.0.0",
