feat: support TypeScript 4.6.2
BREAKING CHANGE:

Support for TypeScript 4.4 and 4.5 has been removed. Please update to TypeScript 4.6.

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "peerDependencies": {
     "@angular/compiler-cli": "^14.0.0 || ^14.0.0-next",
     "tslib": "^2.3.0",
-    "typescript": ">=4.4.0 <4.6"
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@angular/cdk": "~14.0.0-next",
@@ -107,7 +107,7 @@
     "standard-version": "^9.0.0",
     "ts-node": "^10.2.1",
     "tslib": "^2.0.0",
-    "typescript": "~4.5.2",
+    "typescript": "~4.6.2",
     "zone.js": "^0.11.0"
   },
   "private": true,
