ci: rename master to main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,7 +134,7 @@ workflows:
               only: /v.*/
             branches:
               only:
-                - master
+                - main
           requires:
             - setup
       - deploy:
