feat: update generated output to APF 14
With this change we update ng-packagr to generate libraries with APF 14 output. APF 14 changes are;
- Secondary entrypoints no longer contain a `package.json`.
- The entrypoint of the `.d.ts` has been changed to `index.d.ts` so that TypeScript can resolve these without the need of a nested `package.json`.

BREAKING CHANGE: `entryFile` can no longer be named `index.ts` as it will conflict with the generated `index.d.ts`. Please rename

--- a/integration/samples/secondary/feature-c/package.json
+++ b/integration/samples/secondary/feature-c/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/ng-packagr/ng-packagr.git",
   "ngPackage": {
     "lib": {
-      "entryFile": "index.ts"
+      "entryFile": "public_api.ts"
     }
   }
 }
