--- a/integration/samples/scss-paths/sub-module/package.json
+++ b/integration/samples/scss-paths/sub-module/package.json
@@ -11,7 +11,7 @@
   },
   "ngPackage": {
     "lib": {
-      "entryFile": "index.ts",
+      "entryFile": "public_api.ts",
       "styleIncludePaths": ["../assets", "./assets"]
     }
   }
