feat: remove handling of `package.json` as configuration
BREAKING CHANGE: `package.json` is not longer a valid method to configure ng-packagr. Use `ng-package.json` instead.

Closes #2176

--- a/integration/samples/issue-1451/package.json
+++ b/integration/samples/issue-1451/package.json
@@ -1,10 +1,5 @@
 {
   "name": "@example/issue-1451",
   "private": true,
-  "version": "0.0.0",
-  "ngPackage": {
-    "lib": {
-      "entryFile": "public-api.ts"
-    }
-  }
+  "version": "0.0.0"
 }
