--- a/integration/watch/intra-dependent/third/package.json
+++ b/integration/watch/intra-dependent/third/package.json
@@ -2,10 +2,5 @@
   "$schema": "../../../../src/package.schema.json",
   "description": "A third entry point",
   "private": true,
-  "repository": "https://github.com/ng-packagr/ng-packagr.git",
-  "ngPackage": {
-    "lib": {
-      "entryFile": "public_api.ts"
-    }
-  }
+  "repository": "https://github.com/ng-packagr/ng-packagr.git"
 }
