--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -15,23 +15,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "~13.3.0",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
-    "@angular/forms": "~13.3.0",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/router": "~13.3.0",
+    "@angular/cdk": "~14.0.0-next",
+    "@angular/common": "~14.0.0-next",
+    "@angular/compiler": "~14.0.0-next",
+    "@angular/core": "~14.0.0-next",
+    "@angular/forms": "~14.0.0-next",
+    "@angular/platform-browser": "~14.0.0-next",
+    "@angular/platform-browser-dynamic": "~14.0.0-next",
+    "@angular/router": "~14.0.0-next",
     "rxjs": "~7.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.0",
-    "@angular/cli": "~13.3.0",
-    "@angular/compiler-cli": "~13.3.0",
+    "@angular-devkit/build-angular": "~14.0.0-next",
+    "@angular/cli": "~14.0.0-next",
+    "@angular/compiler-cli": "~14.0.0-next",
     "@types/node": "^14.14.37",
-    "typescript": "~4.6.0"
+    "typescript": "~4.7.0-beta"
   }
 }
