build: support `14.1.0-next` as a peer dependency

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "esbuild": "^0.14.29"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "^14.0.0 || ^14.0.0-next",
+    "@angular/compiler-cli": "^14.0.0 || ^14.0.0-next || ^14.1.0-next",
     "tslib": "^2.3.0",
     "typescript": ">=4.6.2 <4.8"
   },
