--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "build": "tsc -p src/tsconfig.packagr.json",
     "postbuild": "node ./scripts/postbuild.js",
     "schema": "json2ts --input src/ng-package.schema.json --output src/ng-package.schema.ts",
-    "release": "standard-version --releaseCommitMessageFormat 'release: cut v{{currentTag}}' --no-verify",
+    "release": "standard-version --releaseCommitMessageFormat 'release: cut {{currentTag}}' --no-verify --tag-prefix=\"\"",
     "publish:ci": "yarn build",
     "lint": "eslint --cache --max-warnings=0 \"**/*.ts\"",
     "integration:samples": "ts-node integration/samples.ts",
