--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -15,22 +15,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "~14.0.0-next",
-    "@angular/common": "~14.0.0-next",
-    "@angular/compiler": "~14.0.0-next",
-    "@angular/core": "~14.0.0-next",
-    "@angular/forms": "~14.0.0-next",
-    "@angular/platform-browser": "~14.0.0-next",
-    "@angular/platform-browser-dynamic": "~14.0.0-next",
-    "@angular/router": "~14.0.0-next",
+    "@angular/cdk": "~14.1.0",
+    "@angular/common": "~14.1.0",
+    "@angular/compiler": "~14.1.0",
+    "@angular/core": "~14.1.0",
+    "@angular/forms": "~14.1.0",
+    "@angular/platform-browser": "~14.1.0",
+    "@angular/platform-browser-dynamic": "~14.1.0",
+    "@angular/router": "~14.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.0.0-next",
-    "@angular/cli": "~14.0.0-next",
-    "@angular/compiler-cli": "~14.0.0-next",
+    "@angular-devkit/build-angular": "~14.1.0",
+    "@angular/cli": "~14.1.0",
+    "@angular/compiler-cli": "~14.1.0",
     "@types/node": "^14.14.37",
     "typescript": "~4.7.0-beta"
   }
