--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -32,6 +32,6 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "~14.1.0",
     "@types/node": "^14.14.37",
-    "typescript": "~4.7.0-beta"
+    "typescript": "~4.8.0"
   }
 }
