feat: support Angular 15

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "esbuild": "^0.15.0"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "^14.0.0 || ^14.0.0-next || ^14.2.0-next",
+    "@angular/compiler-cli": "^15.0.0-next",
     "tslib": "^2.3.0",
     "typescript": ">=4.6.2 <4.9"
   },
