refactor: remove enableIvy check
Ivy is the only rendering engine.

--- a/integration/samples/ivy/tsconfig.ngc.json
+++ b/integration/samples/ivy/tsconfig.ngc.json
@@ -1,8 +1,7 @@
 {
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
-    "fullTemplateTypeCheck": true,
-    "enableIvy": true
+    "fullTemplateTypeCheck": true
   },
   "buildOnSave": false,
   "compileOnSave": false,
