--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-node-resolve": "^14.0.0",
     "ajv": "^8.10.0",
     "ansi-colors": "^4.1.1",
+    "autoprefixer": "^10.4.8",
     "browserslist": "^4.20.0",
     "cacache": "^16.0.0",
     "chokidar": "^3.5.3",
@@ -49,7 +50,6 @@
     "less": "^4.1.2",
     "ora": "^5.1.0",
     "postcss": "^8.4.8",
-    "postcss-preset-env": "^7.4.2",
     "postcss-url": "^10.1.3",
     "rollup": "^2.70.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
@@ -85,7 +85,6 @@
     "@types/jasmine": "^3.0.0",
     "@types/less": "^3.0.2",
     "@types/node": "^14.14.37",
-    "@types/postcss-preset-env": "^7.0.0",
     "@types/read-pkg-up": "^3.0.1",
     "@types/stylus": "^0.48.30",
     "@typescript-eslint/eslint-plugin": "5.36.2",
