--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "peerDependencies": {
     "@angular/compiler-cli": "^15.0.0-next",
     "tslib": "^2.3.0",
-    "typescript": "^4.8.2"
+    "typescript": "~4.8.2"
   },
   "devDependencies": {
     "@angular/cdk": "~14.2.0-next",
