feat: add support for tailwindcss
This feature adds detection of the `tailwindcss` package (https://tailwindcss.com) and provides a mechanism to automatically include support. To enable tailwindcss for a project, two actions must be taken:
1) Install `tailwindcss` (`npm install -D tailwindcss`/`yarn add -D tailwindcss`)
2) Create a tailwindcss configuration file (`tailwind.config.js`) in the project root.  A configuration file in the project root takes precedence over one in the workspace root.

Closes #1943

--- a/package.json
+++ b/package.json
@@ -61,8 +61,14 @@
   },
   "peerDependencies": {
     "@angular/compiler-cli": "^15.0.0-next",
+    "tailwindcss": "^2.0.0 || ^3.0.0",
     "tslib": "^2.3.0",
     "typescript": "~4.8.2"
+  },
+  "peerDependenciesMeta": {
+    "tailwindcss": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@angular/cdk": "~14.2.0-next",
@@ -102,6 +108,7 @@
     "pretty-quick": "~3.1.0",
     "rimraf": "^3.0.2",
     "standard-version": "^9.0.0",
+    "tailwindcss": "^3.2.0",
     "ts-node": "^10.2.1",
     "tslib": "^2.0.0",
     "typescript": "4.8.4",
