build: update angular to v15

--- a/package.json
+++ b/package.json
@@ -71,14 +71,14 @@
     }
   },
   "devDependencies": {
-    "@angular/cdk": "~14.2.0-next",
-    "@angular/common": "~14.2.0-next",
-    "@angular/compiler": "~14.2.0-next",
-    "@angular/compiler-cli": "~14.2.0-next",
-    "@angular/core": "~14.2.0-next",
-    "@angular/material": "~14.2.0-next",
-    "@angular/platform-browser": "~14.2.0-next",
-    "@angular/router": "~14.2.0-next",
+    "@angular/cdk": "~15.0.0",
+    "@angular/common": "~15.0.0",
+    "@angular/compiler": "~15.0.0",
+    "@angular/compiler-cli": "~15.0.0",
+    "@angular/core": "~15.0.0",
+    "@angular/material": "~15.0.0",
+    "@angular/platform-browser": "~15.0.0",
+    "@angular/router": "~15.0.0",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-angular": "^17.0.0",
     "@types/cacache": "^15.0.0",
