--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cacache": "^17.0.0",
     "chokidar": "^3.5.3",
     "commander": "^9.4.0",
+    "convert-source-map": "^2.0.0",
     "dependency-graph": "^0.11.0",
     "esbuild-wasm": "^0.16.0",
     "find-cache-dir": "^3.3.2",
@@ -52,7 +53,6 @@
     "postcss": "^8.4.16",
     "postcss-url": "^10.1.3",
     "rollup": "^3.0.0",
-    "rollup-plugin-sourcemaps": "^0.6.3",
     "rxjs": "^7.5.6",
     "sass": "^1.55.0"
   },
