--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "esbuild": "^0.16.0"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "^15.0.0-next",
+    "@angular/compiler-cli": "^15.0.0 || ^15.1.0-next.0 || ^15.2.0-next.0",
     "tailwindcss": "^2.0.0 || ^3.0.0",
     "tslib": "^2.3.0",
     "typescript": "~4.8.2"
