perf: move stylesheet processing into a worker pool
Stylesheets will now be processed using a worker pool This allows up to four stylesheets to be processed in parallel and keeps the main thread available for other build tasks.

`NG_BUILD_MAX_WORKERS` environment variable can be used to comfigure the limit of workers used.

--- a/src/tsconfig.packagr.json
+++ b/src/tsconfig.packagr.json
@@ -6,6 +6,6 @@
     "skipLibCheck": true, // due to: https://github.com/angular/angular/issues/23112
     "types": ["node"]
   },
-  "files": ["cli/main.ts", "public_api.ts"],
+  "files": ["cli/main.ts", "public_api.ts", "./lib/styles/stylesheet-processor-worker.ts"],
   "exclude": ["**/*.spec.ts"]
 }
