--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -15,22 +15,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "~15.0.0",
-    "@angular/common": "~15.0.0",
-    "@angular/compiler": "~15.0.0",
-    "@angular/core": "~15.0.0",
-    "@angular/forms": "~15.0.0",
-    "@angular/platform-browser": "~15.0.0",
-    "@angular/platform-browser-dynamic": "~15.0.0",
-    "@angular/router": "~15.0.0",
+    "@angular/cdk": "~15.1.0-next.0",
+    "@angular/common": "~15.1.0-next.0",
+    "@angular/compiler": "~15.1.0-next.0",
+    "@angular/core": "~15.1.0-next.0",
+    "@angular/forms": "~15.1.0-next.0",
+    "@angular/platform-browser": "~15.1.0-next.0",
+    "@angular/platform-browser-dynamic": "~15.1.0-next.0",
+    "@angular/router": "~15.1.0-next.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "~15.0.0",
+    "@angular-devkit/build-angular": "~15.1.0-next.0",
+    "@angular/cli": "~15.1.0-next.0",
+    "@angular/compiler-cli": "~15.1.0-next.0",
     "@types/node": "^14.14.37",
     "typescript": "~4.8.0"
   }
