--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "esbuild": "^0.17.0"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "^15.0.0 || ^15.2.0-next.0",
+    "@angular/compiler-cli": "^16.0.0-next.0",
     "tailwindcss": "^2.0.0 || ^3.0.0",
     "tslib": "^2.3.0",
     "typescript": ">=4.8.2 <5.0"
