--- a/package.json
+++ b/package.json
@@ -72,14 +72,14 @@
     }
   },
   "devDependencies": {
-    "@angular/cdk": "~15.1.0-next.0",
-    "@angular/common": "~15.1.0-next.0",
-    "@angular/compiler": "~15.1.0-next.0",
-    "@angular/compiler-cli": "~15.1.0-next.0",
-    "@angular/core": "~15.1.0-next.0",
-    "@angular/material": "~15.1.0-next.0",
-    "@angular/platform-browser": "~15.1.0-next.0",
-    "@angular/router": "~15.1.0-next.0",
+    "@angular/cdk": "~15.2.0",
+    "@angular/common": "~15.2.0",
+    "@angular/compiler": "~15.2.0",
+    "@angular/compiler-cli": "~15.2.0",
+    "@angular/core": "~15.2.0",
+    "@angular/material": "~15.2.0",
+    "@angular/platform-browser": "~15.2.0",
+    "@angular/router": "~15.2.0",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-angular": "^17.0.0",
     "@types/cacache": "^15.0.0",
