--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@angular/compiler-cli": "^16.0.0-next.0",
     "tailwindcss": "^2.0.0 || ^3.0.0",
     "tslib": "^2.3.0",
-    "typescript": ">=4.8.2 <5.0"
+    "typescript": ">=4.9.3 <5.1"
   },
   "peerDependenciesMeta": {
     "tailwindcss": {
@@ -72,14 +72,14 @@
     }
   },
   "devDependencies": {
-    "@angular/cdk": "~15.2.0",
-    "@angular/common": "~15.2.0",
-    "@angular/compiler": "~15.2.0",
-    "@angular/compiler-cli": "~15.2.0",
-    "@angular/core": "~15.2.0",
-    "@angular/material": "~15.2.0",
-    "@angular/platform-browser": "~15.2.0",
-    "@angular/router": "~15.2.0",
+    "@angular/cdk": "~16.0.0-next.2",
+    "@angular/common": "~16.0.0-next.3",
+    "@angular/compiler": "~16.0.0-next.3",
+    "@angular/compiler-cli": "~16.0.0-next.3",
+    "@angular/core": "~16.0.0-next.3",
+    "@angular/material": "~16.0.0-next.2",
+    "@angular/platform-browser": "~16.0.0-next.3",
+    "@angular/router": "~16.0.0-next.3",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-angular": "^17.0.0",
     "@types/cacache": "^15.0.0",
@@ -112,7 +112,7 @@
     "tailwindcss": "^3.2.0",
     "ts-node": "^10.2.1",
     "tslib": "^2.0.0",
-    "typescript": "4.9.5",
+    "typescript": "5.0.2",
     "zone.js": "^0.13.0"
   },
   "private": true,
