feat: (APF) Angular Package Format updates
Several updates to Angular Package Format.

BREAKING CHANGE:

Several changes to the Angular Package Format (APF)
- Removal of FESM2015
- Replacing ES2020 with ES2022
- Replacing FESM2020 with FESM2022

--- a/integration/samples/api/tsconfig.ngc.json
+++ b/integration/samples/api/tsconfig.ngc.json
@@ -1,13 +1,13 @@
 {
   "angularCompilerOptions": {
-    "strictTemplates": true,
+    "strictTemplates": true
   },
   "buildOnSave": false,
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": ".",
-    "target": "es2020",
-    "module": "es2020",
+    "target": "es2022",
+    "module": "es2022",
     "moduleResolution": "node",
     "outDir": "",
     "resolveJsonModule": true,
@@ -21,7 +21,7 @@
     "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "lib": ["dom", "es2020"]
+    "lib": ["dom", "es2022"]
   },
   "exclude": ["node_modules", "dist", "**/*.ngfactory.ts", "**/*.shim.ts", "**/*.spec.ts"]
 }
