--- a/integration/watch/basic/tsconfig.ngc.json
+++ b/integration/watch/basic/tsconfig.ngc.json
@@ -1,12 +1,11 @@
 {
-  "angularCompilerOptions": {
-  },
+  "angularCompilerOptions": {},
   "buildOnSave": false,
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": ".",
-    "target": "es2020",
-    "module": "es2020",
+    "target": "es2022",
+    "module": "es2022",
     "moduleResolution": "node",
     "outDir": "",
     "resolveJsonModule": true,
@@ -20,6 +19,6 @@
     "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "lib": ["dom", "es2020"]
-  },
+    "lib": ["dom", "es2022"]
+  }
 }
