--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "convert-source-map": "^2.0.0",
     "dependency-graph": "^0.11.0",
     "esbuild-wasm": "^0.17.0",
+    "fast-glob": "^3.2.12",
     "find-cache-dir": "^3.3.2",
-    "glob": "^10.0.0",
     "injection-js": "^2.4.0",
     "jsonc-parser": "^3.2.0",
     "less": "^4.1.3",
