--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
     "esbuild": "^0.17.0"
   },
   "peerDependencies": {
-    "@angular/compiler-cli": "^16.0.0-next.0",
+    "@angular/compiler-cli": "^16.0.0 || ^16.1.0-next.0",
     "tailwindcss": "^2.0.0 || ^3.0.0",
     "tslib": "^2.3.0",
-    "typescript": ">=4.9.3 <5.1"
+    "typescript": ">=4.9.3 <5.2"
   },
   "peerDependenciesMeta": {
     "tailwindcss": {
