--- a/package.json
+++ b/package.json
@@ -72,14 +72,14 @@
     }
   },
   "devDependencies": {
-    "@angular/cdk": "~16.0.0-next.2",
-    "@angular/common": "~16.0.0-next.3",
-    "@angular/compiler": "~16.0.0-next.3",
-    "@angular/compiler-cli": "~16.0.0-next.3",
-    "@angular/core": "~16.0.0-next.3",
-    "@angular/material": "~16.0.0-next.2",
-    "@angular/platform-browser": "~16.0.0-next.3",
-    "@angular/router": "~16.0.0-next.3",
+    "@angular/cdk": "~16.1.0",
+    "@angular/common": "~16.1.0",
+    "@angular/compiler": "~16.1.0",
+    "@angular/compiler-cli": "~16.1.0",
+    "@angular/core": "~16.1.0",
+    "@angular/material": "~16.1.0",
+    "@angular/platform-browser": "~16.1.0",
+    "@angular/router": "~16.1.0",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-angular": "^17.0.0",
     "@types/cacache": "^15.0.0",
